// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline renders correctly with authors and links 1`] = `
<DocumentFragment>
  .emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-2 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #903d91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-19"
  >
    <li
      class="emotion-10"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-8"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-3"
            >
              <a
                aria-label="more by Jane Smith"
                class="emotion-2"
                data-author="Jane Smith"
                href="www.example.com"
                rel="author"
                title="more by Jane Smith"
              >
                <span
                  class="emotion-1"
                >
                  <span
                    class="emotion-0"
                  >
                    Jane Smith
                  </span>
                </span>
              </a>
            </div>
            <div
              class="emotion-6"
            >
              <div
                class="emotion-3"
              >
                <hr
                  class="emotion-4"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-10"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-8"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-7"
            >
              <a
                aria-label="more by John Smith"
                class="emotion-2"
                data-author="John Smith"
                href="www.example.com"
                rel="author"
                title="more by John Smith"
              >
                <span
                  class="emotion-1"
                >
                  <span
                    class="emotion-0"
                  >
                    John Smith
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with authors and titles 1`] = `
<DocumentFragment>
  .emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-4 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

<ul
    class="emotion-20"
  >
    <li
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Jane Smith, 
            </span>
          </div>
        </div>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <div
              class="emotion-4"
            >
              <span
                class="emotion-0"
              >
                Author
              </span>
            </div>
            <div
              class="emotion-7"
            >
              <div
                class="emotion-4"
              >
                <hr
                  class="emotion-5"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              John Smith, 
            </span>
          </div>
        </div>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Other Author
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with authors, location, titles and links 1`] = `
<DocumentFragment>
  .emotion-34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-11 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-14 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-12 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2f75d7;
}

.emotion-2 svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) {
  color: #2f75d7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2f75d7;
  color: #2f75d7;
}

.emotion-2:visited:not(:disabled) {
  color: #903d91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903d91;
  color: #903d91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-34"
  >
    <li
      class="emotion-18"
    >
      <div
        class="emotion-17"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-4"
            >
              <a
                aria-label="more by Jane Smith"
                class="emotion-2"
                data-author="Jane Smith"
                href="www.example.com"
                rel="author"
                title="Author"
              >
                <span
                  class="emotion-1"
                >
                  <span
                    class="emotion-0"
                  >
                    Jane Smith
                  </span>
                </span>
              </a>
              <span
                class="emotion-3"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-3"
            >
              Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-11"
            >
              <span
                class="emotion-3"
              >
                London
              </span>
            </div>
            <div
              class="emotion-14"
            >
              <div
                class="emotion-11"
              >
                <hr
                  class="emotion-12"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-18"
    >
      <div
        class="emotion-17"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-4"
            >
              <a
                aria-label="more by John Smith"
                class="emotion-2"
                data-author="John Smith"
                href="www.example.com"
                rel="author"
                title="Other Author"
              >
                <span
                  class="emotion-1"
                >
                  <span
                    class="emotion-0"
                  >
                    John Smith
                  </span>
                </span>
              </a>
              <span
                class="emotion-3"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-3"
            >
              Other Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-3"
            >
              London
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with multiple authors 1`] = `
<DocumentFragment>
  .emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-1 {
  margin-right: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  border-style: solid;
  border-color: #cccccc;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

<ul
    class="emotion-23"
  >
    <li
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                Jane Smith
              </span>
            </div>
            <div
              class="emotion-4"
            >
              <div
                class="emotion-1"
              >
                <hr
                  class="emotion-2"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-1"
            >
              <span
                class="emotion-0"
              >
                John Smith
              </span>
            </div>
            <div
              class="emotion-4"
            >
              <div
                class="emotion-1"
              >
                <hr
                  class="emotion-2"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-5"
          >
            <span
              class="emotion-0"
            >
              Sam Smith
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with one author 1`] = `
<DocumentFragment>
  .emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<ul
    class="emotion-5"
  >
    <li
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <span
              class="emotion-0"
            >
              Jane Smith
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Byline renders correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-14 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
  height: 100%;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
}

.emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #f000dc;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4277777777777778em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4902777777777778em;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  color: #f000dc;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  white-space: pre;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4277777777777778em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4902777777777778em;
}

.emotion-11 {
  margin-right: 12px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-12 {
  border-style: solid;
  border-color: #de7818;
  border-width: 2px;
  border-width: 0px;
  margin: 0;
  border-left-width: 2px;
  display: inline-block;
  height: 100%;
}

<ul
    class="emotion-34"
  >
    <li
      class="emotion-18"
    >
      <div
        class="emotion-17"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-4"
            >
              <a
                aria-label="more by Jane Smith"
                class="emotion-2"
                data-author="Jane Smith"
                href="www.example.com"
                rel="author"
                title="Author"
              >
                <span
                  class="emotion-1"
                >
                  <span
                    class="emotion-0"
                  >
                    Jane Smith
                  </span>
                </span>
              </a>
              <span
                class="emotion-3"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-3"
            >
              Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-11"
            >
              <span
                class="emotion-3"
              >
                London
              </span>
            </div>
            <div
              class="emotion-14"
            >
              <div
                class="emotion-11"
              >
                <hr
                  class="emotion-12"
                  data-testid="divider"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-18"
    >
      <div
        class="emotion-17"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-4"
            >
              <a
                aria-label="more by John Smith"
                class="emotion-2"
                data-author="John Smith"
                href="www.example.com"
                rel="author"
                title="Other Author"
              >
                <span
                  class="emotion-1"
                >
                  <span
                    class="emotion-0"
                  >
                    John Smith
                  </span>
                </span>
              </a>
              <span
                class="emotion-3"
              >
                , 
              </span>
            </div>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-3"
            >
              Other Author, 
            </span>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-3"
            >
              London
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
